<resources>
    <string name="app_name">PR9_VorobyevP_PR-21.102</string>
    <string name="smart">моё смарт-устройство</string>
    <string name="km">1.3 km</string>
    <string name="kal">59 kcal</string>
    <string name="steps">1583 steps</string>
    <string name="time">30 min</string>
    <string name="kg">62 kg</string>
    <string name="bmp">82 bmp</string>
    <string name="steps2">112576 steps</string>
    <string name="man">маршруты</string>
    <string name="text">краткая информация</string>
</resources>