<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        android:background="#516DFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/smart" />

            <TextView
                android:id="@+id/textView1"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/smart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/geo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="35dp"
                android:text="@string/km"
                android:textColor="@color/black"
                android:textSize="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/fire" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="35dp"
                android:text="@string/kal"
                android:textColor="@color/black"
                android:textSize="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/textView4"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/steps" />

            <TextView
                android:id="@+id/textView5"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="35dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/steps" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="170dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        app:srcCompat="@drawable/icon_kg" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="15dp"
                        android:text="@string/kg"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingRight="0dp"
                    app:srcCompat="@drawable/d1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="185dp"
                android:layout_height="169dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        app:srcCompat="@drawable/heart" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="15dp"
                        android:text="@string/bmp"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:paddingRight="0dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/d2" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>